f5_sphinx_theme/static/css/f5-theme.css
/* ... */
h3 {
  font-size: 20px;
}
h4 {
  font-size: 18px;
  margin: 18px 0 10px 0;
  width: 100%;
}
h5,
.h5,
p.first.sidebar-title {
  font-size: 16px;
  font-weight: bold;
}
h6,
.h6 {
  font-size: 15px;
  font-style: italic;
  font-weight: bold;
}

caption {
  display: table-caption;
  text-align: left;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15px;
  font-style: italic;
  color: #000;
}

ol.arabic {
  padding-left: 20px;
}

/*
formatting for sphinx pullquote directive
*/
blockquote.pull-quote {
  padding: 11px !important;
  border-color: #00A1E4;
  border-width: 4px;
  font-size: 95%;
  background-color: #F7F7F7;
  border-radius: 4px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
}

/*
formatting for using sidebar class with admonitions
 */
.sidebar.admonition {
  padding: 0 !important;
}

@media (max-width: 768px) {
.sidebar.admonition {
    padding: 0 !important;
  }
}

table {
  width: auto;
  overflow: scroll;
  border: 1px solid #00A1E4;
  border-spacing: 0;
  margin-bottom: 22px;
  margin-top: 16px;
  border-collapse: collapse;
  border-radius: 4px;
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
  word-wrap: break-word;
}

table thead th {
  background: #00A1E4;
  border: none;
  color: #fff;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 8px 24px;
  text-align: left;
  text-transform: uppercase;
}

table tbody tr {
  background: none;
}

table tbody td {
  border: 1px solid rgba(207,216,220,.24);
  padding: 8px 24px;
  text-align: left;
}

tr,
tbody tr:nth-child(odd),
tbody tr:nth-child(even) {
  background: #FFF;
  border-top: 1px solid #9c9aa3;
}

img {
  object-fit: scale-down;
  max-width: 100%;
  height: auto;
}

img.logo {
  margin: 0 12px 12px 12px;
}

ul.simple {
  padding-left: 20px;
}

/*
override bootstrap pre settings in sphinx literal blocks
 */
div[class^='highlight'] pre,
div[class~='docutils'],
code,
.code.descname {
  width: auto;
  padding: 1px;
  font-family: Menlo,Monaco,Consolas,Courier New,monospace;
  line-height: 1.5;
  overflow: auto;
  border-radius: 0;
  color: #000;
  border: 0;
  background: rgba(0,0,0,0);
}

div[class^='highlight'] > table {
  overflow-x: scroll;
  overflow-y: auto;
}

/*
override table borders and spacing in literal blocks using line numbers
 */
table[class^='highlight'],
table[class^='highlight'] tbody tr,
table[class^='highlight'] tbody tr:nth-child(odd),
table[class^='highlight'] th,
table[class^='highlight'] td {
  background: #e4e4e4;
  padding: 0;
  padding-top: 5px;
  column-gap: 10px;
  margin-top: auto;
  width: 100%;
  overflow-x:auto;
}

div[class^='highlight'] > div > pre {
  box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
  word-wrap: break-word;
  word-break: break-all;
}

div[class^='highlight'] > table > tbody > tr > td.linenos {
  width: 4.5%;
}

div[class^='highlight'] > table > tbody > tr > td.linenos,
div[class^='highlight'] > table > tbody > tr > td.code {
  padding-left: 5px;
  padding-right: 0;
  /*align-content: left;*/
}

ol > li:nth-child(1) > div > div > pre,
div[class^='highlight'] > div > pre,
pre,
.span.pre {
  white-space: pre-wrap;
  border: 0;
  background: #e4e4e4;
  padding: 10px;
}

.literal-block-wrapper + .docutils + .container {
  background-color: rgba(0,0,0,0);
  border: none;
}

code.xref.download.docutils.literal,
span.icon.fa.fa-download {
  color: #0083c0;
  background-color: transparent;
}

table[class^='highlight'] ~ tr {
  margin: 0;
  padding: 0;
}

div[class=code-block-caption] {
  font-size: 90%;
  font-weight: bold;
  font-family: Proxima,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  padding-bottom: 1px;
}

dl.function dt {
  margin-bottom: 2px;
  font-size: 95%;
}

dl > dd > table,
dl > dd > table > *,
dl > dd > table > tbody > tr.field-even.field,
dl > dd > table > tbody > tr.field-odd.field {
  border: 0;
  border-top: 0;
  background: rgba(229, 234, 239, 0.39);
}

dl > dd > p {
  padding-left: 10px;
  padding-right: 10px;
}
dl > dd > table > tbody > tr:nth-child(even) > td.field-body > ul,
dl > dd > table > tbody > tr:nth-child(odd) > td.field-body > ul {
  padding-left: 10px;
}

.highlight {
  background: none!important;
}

.pageHeader {
  height: 60px;
  border-bottom: 10px solid #2270B3;
  padding-top: 4px;
}

@media (max-width: 768px) {
  .row.pageHeader, .pageHeader, #MainMenu {
    display: none;
  }
}

@media (min-width: 768px) {
  .row.pageHeader, .pageHeader, #MainMenu {
    display: block!important;
    margin-top: 0;
    margin-bottom: -4px;
    padding-bottom: 0;
  }
}

@media screen and (max-width: 1148px) {
  div[class^='highlight'] > table > tbody > tr > td.linenos {
    display: none;
  }

}

.container {
  max-width: 100%;
}

/* override table formatting from f5.css */
tr td:nth-last-child(n+5), tr td:nth-last-child(n+5) ~ td {
    font-size: 100%;
}

table.docutils.footnote, table.docutils.footnote > tbody, table.docutils.footnote > tbody > tr, table.docutils.footnote > tbody > tr > td {
    border: none;
    font-size: 95%;
    box-shadow: none;
    padding-left: 4px;
    margin-bottom: 0;
    margin-top: 0;
}


/*
 Mobile phone navbar
*/

#dismiss {
    width: 100%;
    height: 0px;
    visibility: hidden;
    line-height: 35px;
    text-align: center;
    cursor: pointer;
}

@media (max-width: 768px) {
  #sidebar.active {
    margin-left: 0;
    margin-bottom: 30px;
    min-width: 100vw;
    max-width: 100%;
    overflow-x: unset;
  }
  #sidebar {
    margin-left: -100%;
    margin-right: 0px;
  }
  #content {
    margin-left: 0px;
  }
  #content.active {
    margin-left: 0;
  }
  #dismiss {
    height: 35px;
    visibility: visible;
  }
  .docs-container {
    margin-left: 0px;
  }
  #sidebarCollapse {
    visibility: hidden;
    display: none;
  }
  .site-article-inner {
    width: 100%;
  }
}

/* Older mobile phones with 320px screen */
@media (max-width: 330px) {
  #sidebar {
    max-width: 300px;
  }
}

